Consolidate drawing function into common module

--- a/G-SMILES-to-parameters.ipynb
+++ b/G-SMILES-to-parameters.ipynb
@@ -15,183 +15,36 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "ac6003c1",
+   "id": "b01f6dac",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "d1820ab95b19477ea24896e243463bd0",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": []
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
-    "from typing import Iterable, Optional, Union\n",
+    "from utils import draw_molecule\n",
     "\n",
-    "from IPython.display import SVG\n",
     "from openff.toolkit import ForceField, Molecule\n",
-    "from openff.toolkit.topology import FrozenMolecule\n",
-    "from openff.units import unit\n",
-    "from rdkit import Chem\n",
-    "from rdkit.Chem import Draw\n",
-    "from rdkit.Chem.rdDepictor import Compute2DCoords"
+    "from openff.units import unit"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "3ced8df5",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "DEFAULT_WIDTH = 980\n",
-    "DEFAULT_HEIGHT = 400\n",
-    "\n",
-    "Color = Iterable[float]\n",
-    "BondIndices = tuple[int, int]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
    "id": "00bbdf6b",
    "metadata": {},
    "outputs": [],
    "source": [
-    "def draw_molecule(\n",
-    "    molecule: Union[str, Molecule, Chem.Mol],\n",
-    "    image_width: int = DEFAULT_WIDTH,\n",
-    "    image_height: int = DEFAULT_HEIGHT,\n",
-    "    highlight_atoms: Optional[Union[list[int], dict[int, Color]]] = None,\n",
-    "    highlight_bonds: Optional[\n",
-    "        Union[list[BondIndices], dict[BondIndices, Color]]\n",
-    "    ] = None,\n",
-    "    atom_notes: Optional[dict[int, str]] = None,\n",
-    "    bond_notes: Optional[dict[BondIndices, str]] = None,\n",
-    "    explicit_hydrogens: Optional[bool] = None,\n",
-    "    color_by_element: Optional[bool] = None,\n",
-    ") -> SVG:\n",
-    "    \"\"\"Draw a molecule\n",
-    "    Parameters\n",
-    "    ==========\n",
-    "    molecule\n",
-    "        The molecule to draw.\n",
-    "    image_width\n",
-    "        The width of the resulting image in pixels.\n",
-    "    image_height\n",
-    "        The height of the resulting image in pixels.\n",
-    "    highlight_atoms\n",
-    "        A list of atom indices to highlight, or a map from indices to colors.\n",
-    "        Colors should be given as triplets of floats between 0.0 and 1.0.\n",
-    "    highlight_atoms\n",
-    "        A list of pairs of atom indices indicating bonds to highlight, or a map\n",
-    "        from index pairs to colors. Colors should be given as triplets of floats\n",
-    "        between 0.0 and 1.0.\n",
-    "    atom_notes\n",
-    "        A map from atom indices to a string that should be printed near the\n",
-    "        atom.\n",
-    "    bond_notes\n",
-    "        A map from atom index pairs to a string that should be printed near the\n",
-    "        bond.\n",
-    "    explicit_hydrogens\n",
-    "        If ``False``, allow uncharged monovalent hydrogens to be hidden. If\n",
-    "        ``True``, make all hydrogens explicit. If ``None``\n",
-    "    color_by_element\n",
-    "        If True, color heteroatoms according to their element; if False, the\n",
-    "        image will be black and white. By default, uses black and white when\n",
-    "        highlight_atoms or highlight_bonds is provided, and color otherwise.\n",
-    "    Raises\n",
-    "    ======\n",
-    "    KeyError\n",
-    "        When an atom or bond in highlight_atoms or highlight_bonds is missing\n",
-    "        from the image, including when it is present in the molecule but hidden.\n",
-    "    \"\"\"\n",
-    "    if isinstance(molecule, FrozenMolecule):\n",
-    "        rdmol = molecule.to_rdkit()\n",
-    "    elif isinstance(molecule, str):\n",
-    "        rdmol = Molecule.from_smiles(molecule).to_rdkit()\n",
-    "    else:\n",
-    "        rdmol = molecule\n",
-    "\n",
-    "    if color_by_element is None:\n",
-    "        color_by_element = highlight_atoms is None and highlight_bonds is None\n",
-    "\n",
-    "    if explicit_hydrogens is None:\n",
-    "        idx_map = {i: i for i in range(rdmol.GetNumAtoms())}\n",
-    "    elif explicit_hydrogens:\n",
-    "        idx_map = {i: i for i in range(rdmol.GetNumAtoms())}\n",
-    "        rdmol = Chem.AddHs(rdmol, explicitOnly=True)\n",
-    "    else:\n",
-    "        idx_map = {\n",
-    "            old: new\n",
-    "            for new, old in enumerate(\n",
-    "                a.GetIdx()\n",
-    "                for a in rdmol.GetAtoms()\n",
-    "                if a.GetAtomicNum() != 1 and a.GetMass() != 1\n",
-    "            )\n",
-    "        }\n",
-    "        rdmol = Chem.RemoveHs(rdmol, updateExplicitCount=True)\n",
-    "\n",
-    "    if highlight_atoms is None:\n",
-    "        highlight_atoms = []\n",
-    "        highlight_atom_colors = None\n",
-    "    elif isinstance(highlight_atoms, dict):\n",
-    "        highlight_atom_colors = {\n",
-    "            idx_map[i]: tuple(c) for i, c in highlight_atoms.items() if i in idx_map\n",
-    "        }\n",
-    "        highlight_atoms = list(highlight_atoms.keys())\n",
-    "    else:\n",
-    "        highlight_atoms = [idx_map[i] for i in highlight_atoms if i in idx_map]\n",
-    "        highlight_atom_colors = None\n",
-    "\n",
-    "    if highlight_bonds is None:\n",
-    "        highlight_bonds = []\n",
-    "        highlight_bond_colors = None\n",
-    "    elif isinstance(highlight_bonds, dict):\n",
-    "        highlight_bond_colors = {\n",
-    "            rdmol.GetBondBetweenAtoms(idx_map[i_a], idx_map[i_b]).GetIdx(): tuple(v)\n",
-    "            for (i_a, i_b), v in highlight_bonds.items()\n",
-    "            if i_a in idx_map and i_b in idx_map\n",
-    "        }\n",
-    "\n",
-    "        highlight_bonds = list(highlight_bond_colors.keys())\n",
-    "    else:\n",
-    "        highlight_bonds = [\n",
-    "            rdmol.GetBondBetweenAtoms(idx_map[i_a], idx_map[i_b])\n",
-    "            for i_a, i_b in highlight_bonds\n",
-    "            if i_a in idx_map and i_b in idx_map\n",
-    "        ]\n",
-    "        highlight_bond_colors = None\n",
-    "\n",
-    "    if bond_notes is not None:\n",
-    "        for (i_a, i_b), note in bond_notes.items():\n",
-    "            if i_a not in idx_map or i_b not in idx_map:\n",
-    "                continue\n",
-    "            rdbond = rdmol.GetBondBetweenAtoms(idx_map[i_a], idx_map[i_b])\n",
-    "            rdbond.SetProp(\"bondNote\", note)\n",
-    "\n",
-    "    if atom_notes is not None:\n",
-    "        for i, note in atom_notes.items():\n",
-    "            if i not in idx_map:\n",
-    "                continue\n",
-    "            rdatom = rdmol.GetAtomWithIdx(idx_map[i])\n",
-    "            rdatom.SetProp(\"atomNote\", note)\n",
-    "\n",
-    "    Compute2DCoords(rdmol)\n",
-    "\n",
-    "    drawer = Draw.MolDraw2DSVG(image_width, image_height)\n",
-    "\n",
-    "    draw_options = drawer.drawOptions()\n",
-    "    if not color_by_element:\n",
-    "        draw_options.useBWAtomPalette()\n",
-    "\n",
-    "    drawer.DrawMolecule(\n",
-    "        rdmol,\n",
-    "        highlightAtoms=highlight_atoms,\n",
-    "        highlightAtomColors=highlight_atom_colors,\n",
-    "        highlightBonds=highlight_bonds,\n",
-    "        highlightBondColors=highlight_bond_colors,\n",
-    "    )\n",
-    "    drawer.FinishDrawing()\n",
-    "\n",
-    "    svg_contents = drawer.GetDrawingText()\n",
-    "\n",
-    "    return SVG(svg_contents)\n",
-    "\n",
-    "\n",
     "def get_bond_lengths(\n",
     "    molecule: str,\n",
     "    force_field: ForceField = ForceField(\"openff-2.1.0.offxml\"),\n",
@@ -212,22 +65,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "id": "a786ddfc",
    "metadata": {},
    "outputs": [
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "f7999d0997c0464db7b3284723a84aea",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": []
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
     {
      "data": {
       "image/svg+xml": [
@@ -443,7 +284,7 @@
        "<IPython.core.display.SVG object>"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -456,7 +297,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 4,
    "id": "f71286fa",
    "metadata": {},
    "outputs": [
@@ -625,7 +466,7 @@
        "<IPython.core.display.SVG object>"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -638,7 +479,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "dbc9ada7",
+   "id": "e26307a5",
    "metadata": {},
    "outputs": [],
    "source": []
