--- a/G-SMILES-to-parameters.ipynb
+++ b/G-SMILES-to-parameters.ipynb
@@ -8,7 +8,16 @@
    "outputs": [],
    "source": [
     "!wget -q https://raw.githubusercontent.com/openforcefield/2023-workshop-vignettes/main/colab_setup.ipynb\n",
-    "%run colab_setup.ipynb\n",
+    "%run colab_setup.ipynb"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ce67027d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "%env LD_LIBRARY_PATH=$LD_LIBRARY_PATH:$CONDA_PREFIX/lib/"
    ]
   },
