Set env everywhere, update some installation commands

--- a/G-retrieve-qcarchive-torsiondrive.ipynb
+++ b/G-retrieve-qcarchive-torsiondrive.ipynb
@@ -8,8 +8,16 @@
    "source": [
     "!wget -q https://raw.githubusercontent.com/openforcefield/2023-workshop-vignettes/main/colab_setup.ipynb\n",
     "%run colab_setup.ipynb\n",
-    "%env LD_LIBRARY_PATH=$LD_LIBRARY_PATH:$CONDA_PREFIX/lib/\n",
     "!mamba install qcportal -c conda-forge -yq"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%env LD_LIBRARY_PATH=$LD_LIBRARY_PATH:$CONDA_PREFIX/lib/"
    ]
   },
   {
