--- a/G-vectorized-representations.ipynb
+++ b/G-vectorized-representations.ipynb
@@ -9,8 +9,17 @@
    "source": [
     "!wget -q https://raw.githubusercontent.com/openforcefield/2023-workshop-vignettes/main/colab_setup.ipynb\n",
     "%run colab_setup.ipynb\n",
-    "%env LD_LIBRARY_PATH=$LD_LIBRARY_PATH:$CONDA_PREFIX/lib/\n",
     "!mamba install jax -c conda-forge -yq"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ae3d4865",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%env LD_LIBRARY_PATH=$LD_LIBRARY_PATH:$CONDA_PREFIX/lib/"
    ]
   },
   {
