--- a/Y-from-openmm-xml.ipynb
+++ b/Y-from-openmm-xml.ipynb
@@ -2,23 +2,29 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "id": "87eedf27",
+   "execution_count": null,
+   "id": "668f7954",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "env: INTERCHANGE_EXPERIMENTAL=1\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "%env INTERCHANGE_EXPERIMENTAL=1"
+    "!wget -q https://raw.githubusercontent.com/openforcefield/2023-workshop-vignettes/main/colab_setup.ipynb\n",
+    "%run colab_setup.ipynb\n",
+    "!mamba install \"openff-nagl-models =0.0.2\" \"openff-nagl = 0.2.2\" -c conda-forge -yq"
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "bbdd1408",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%env INTERCHANGE_EXPERIMENTAL=1\n",
+    "%env LD_LIBRARY_PATH=$LD_LIBRARY_PATH:$CONDA_PREFIX/lib"
+   ]
+  },
+  {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "e3ee15c0",
    "metadata": {},
@@ -45,9 +51,8 @@
    ],
    "source": [
     "import urllib\n",
-    "url = (\n",
-    "    \"https://raw.githubusercontent.com/samplchallenges/SAMPL6/master/host_guest/SAMPLing/CB8-G3-0/\"\n",
-    ")\n",
+    "\n",
+    "url = \"https://raw.githubusercontent.com/samplchallenges/SAMPL6/master/host_guest/SAMPLing/CB8-G3-0/\"\n",
     "\n",
     "urllib.request.urlretrieve(url + \"OPENMM/complex.xml\", \"complex.xml\")\n",
     "urllib.request.urlretrieve(url + \"PDB/complex.pdb\", \"complex.pdb\")"
@@ -79,8 +84,7 @@
     "\n",
     "from openff.units.openmm import ensure_quantity\n",
     "\n",
-    "from openff.interchange.drivers import get_openmm_energies\n",
-    "from openff.interchange.drivers.all import get_summary_data"
+    "from openff.interchange.drivers import get_openmm_energies, get_summary_data"
    ]
   },
   {
@@ -125,7 +129,8 @@
    ],
    "source": [
     "import nglview\n",
-    "nglview.show_file('complex.pdb')"
+    "\n",
+    "nglview.show_file(\"complex.pdb\")"
    ]
   },
   {
@@ -162,67 +167,6 @@
    ],
    "source": [
     "get_openmm_energies(inputted)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 9,
-   "id": "45ed5aa8",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>Angle</th>\n",
-       "      <th>Bond</th>\n",
-       "      <th>Electrostatics</th>\n",
-       "      <th>Torsion</th>\n",
-       "      <th>vdW</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>OpenMM</th>\n",
-       "      <td>893.205219</td>\n",
-       "      <td>170.605375</td>\n",
-       "      <td>-110747.150441</td>\n",
-       "      <td>503.72436</td>\n",
-       "      <td>13049.185455</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "             Angle        Bond  Electrostatics    Torsion           vdW\n",
-       "OpenMM  893.205219  170.605375  -110747.150441  503.72436  13049.185455"
-      ]
-     },
-     "execution_count": 9,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "get_summary_data(inputted, _engines=[\"OpenMM\"])"
    ]
   },
   {
