--- a/Y-interchange-combination-export.ipynb
+++ b/Y-interchange-combination-export.ipynb
@@ -8,8 +8,7 @@
    "outputs": [],
    "source": [
     "!wget -q https://raw.githubusercontent.com/openforcefield/2023-workshop-vignettes/main/colab_setup.ipynb\n",
-    "%run colab_setup.ipynb\n",
-    "%env LD_LIBRARY_PATH=$LD_LIBRARY_PATH:$CONDA_PREFIX/lib/"
+    "%run colab_setup.ipynb"
    ]
   },
   {
@@ -19,10 +18,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "%env INTERCHANGE_EXPERIMENTAL=1"
+    "%env INTERCHANGE_EXPERIMENTAL=1\n",
+    "%env LD_LIBRARY_PATH=$LD_LIBRARY_PATH:$CONDA_PREFIX/lib/"
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "6ee88ac1",
    "metadata": {},
@@ -31,6 +32,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "3326be17",
    "metadata": {},
@@ -60,15 +62,11 @@
     "\n",
     "from openff.interchange import Interchange\n",
     "from openff.interchange.components._packmol import pack_box\n",
-    "from openff.interchange.drivers import (\n",
-    "    get_amber_energies,\n",
-    "    get_gromacs_energies,\n",
-    "    get_openmm_energies,\n",
-    ")\n",
-    "from openff.interchange.drivers.all import get_summary_data"
+    "from openff.interchange.drivers import get_summary_data, get_openmm_energies"
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "43985f07",
    "metadata": {},
@@ -77,6 +75,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "cfb48b42",
    "metadata": {},
@@ -88,6 +87,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "cb724c7f",
    "metadata": {},
@@ -115,6 +115,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "da20c02d",
    "metadata": {},
@@ -136,6 +137,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "d535feda",
    "metadata": {},
@@ -155,6 +157,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "913a30c1",
    "metadata": {},
@@ -163,6 +166,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "508637d7",
    "metadata": {},
@@ -173,6 +177,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "fd22228a",
    "metadata": {
@@ -200,6 +205,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "b43c2a9f",
    "metadata": {},
@@ -219,6 +225,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "2fe17b6a",
    "metadata": {},
@@ -243,6 +250,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "4834cc87",
    "metadata": {},
@@ -264,6 +272,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "350ea506",
    "metadata": {},
@@ -272,6 +281,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "ed30b0c4",
    "metadata": {},
@@ -292,6 +302,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "431055c0",
    "metadata": {},
@@ -317,6 +328,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "b7fb169e",
    "metadata": {},
@@ -340,6 +352,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "ea7a2487",
    "metadata": {},
@@ -369,6 +382,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "9b71faac",
    "metadata": {},
@@ -419,6 +433,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "d68c7bd0",
    "metadata": {},
@@ -440,6 +455,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "183bba04",
    "metadata": {},
@@ -448,6 +464,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "f156f50c",
    "metadata": {},
@@ -502,6 +519,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "e0e96bb2",
    "metadata": {},
@@ -510,6 +528,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "9a15e4ee",
    "metadata": {},
@@ -518,6 +537,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "bd1a116d",
    "metadata": {},
@@ -538,6 +558,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "a061187e",
    "metadata": {},
@@ -557,6 +578,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "adf0d0de",
    "metadata": {},
@@ -577,6 +599,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "9374b62c",
    "metadata": {},
@@ -597,6 +620,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "207b8b9b",
    "metadata": {},
@@ -621,6 +645,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "6f06c829-7072-422d-af4d-cfd72ab4179f",
    "metadata": {},
@@ -640,6 +665,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "60629689-8858-4812-8639-ebcd91e3ad0e",
    "metadata": {},
@@ -660,6 +686,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "fb1d4e38-a1eb-47d9-952e-72a71a82a67d",
    "metadata": {},
@@ -719,6 +746,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "f9f41524-ab1b-4ebe-af76-7cfc79e0aef1",
    "metadata": {},
