--- a/Y-interchange-gromacs-export.ipynb
+++ b/Y-interchange-gromacs-export.ipynb
@@ -8,7 +8,16 @@
    "outputs": [],
    "source": [
     "!wget https://raw.githubusercontent.com/openforcefield/2023-workshop-vignettes/main/colab_setup.ipynb\n",
-    "%run colab_setup.ipynb\n",
+    "%run colab_setup.ipynb"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "0f073dc0",
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "%env LD_LIBRARY_PATH=$LD_LIBRARY_PATH:$CONDA_PREFIX/lib/"
    ]
   },
@@ -453,9 +462,6 @@
     "# )\n",
     "view"
    ]
-  },
-  {
-   "source": []
   }
  ],
  "metadata": {
