--- a/Y-micelle-self-assembly.ipynb
+++ b/Y-micelle-self-assembly.ipynb
@@ -40,12 +40,13 @@
     "import numpy as np\n",
     "import mdtraj\n",
     "\n",
+    "\n",
     "def visualize(topology):\n",
     "    \"\"\"Visualize a topology with nglview\"\"\"\n",
     "    with StringIO() as f:\n",
     "        topology.to_file(file=f)\n",
     "        pdb_str = f.getvalue()\n",
-    "    return nglview.show_text(pdb_str)\n"
+    "    return nglview.show_text(pdb_str)"
    ]
   },
   {
@@ -57,11 +58,13 @@
    },
    "outputs": [],
    "source": [
-    "#TODO: phosphatidylethanolamine or phosphatidylserine may have easier-to-spot hydrophillic head groups\n",
-    "dlpc = Molecule.from_smiles(\"CCCCCCCCCCCC(=O)OC[C@H](CO[P@](=O)([O-])OCC[N+](C)(C)C)OC(=O)CCCCCCCCCCC\")\n",
+    "# TODO: phosphatidylethanolamine or phosphatidylserine may have easier-to-spot hydrophillic head groups\n",
+    "dlpc = Molecule.from_smiles(\n",
+    "    \"CCCCCCCCCCCC(=O)OC[C@H](CO[P@](=O)([O-])OCC[N+](C)(C)C)OC(=O)CCCCCCCCCCC\"\n",
+    ")\n",
     "lipids = [dlpc]\n",
     "\n",
-    "conc_nacl = 0.1 * unit.mole/unit.liter\n",
+    "conc_nacl = 0.1 * unit.mole / unit.liter\n",
     "n_waters = 4000\n",
     "n_lipids = [25]\n",
     "target_density = 1.0 * unit.gram / unit.milliliter"
@@ -85,14 +88,19 @@
     "molecules = [*lipids, water, na, cl]\n",
     "n_copies = [*n_lipids, n_waters, n_nacl, n_nacl]\n",
     "\n",
-    "total_mass = sum([sum([atom.mass for atom in molecule.atoms]) * n for molecule, n in zip(molecules, n_copies)])\n",
+    "total_mass = sum(\n",
+    "    [\n",
+    "        sum([atom.mass for atom in molecule.atoms]) * n\n",
+    "        for molecule, n in zip(molecules, n_copies)\n",
+    "    ]\n",
+    ")\n",
     "target_volume = total_mass / target_density\n",
     "box_size = np.ones(3) * np.cbrt(target_volume)\n",
     "\n",
     "top = pack_box(\n",
     "    molecules,\n",
     "    n_copies,\n",
-    "    box_size = box_size,\n",
+    "    box_size=box_size,\n",
     "    tolerance=0.05 * unit.nanometer,\n",
     ")"
    ]
@@ -179,7 +187,7 @@
     "\n",
     "openmm_system.addForce(\n",
     "    openmm.MonteCarloBarostat(\n",
-    "        1.0 * openmm.unit.bar, \n",
+    "        1.0 * openmm.unit.bar,\n",
     "        temperature,\n",
     "    )\n",
     ")"
@@ -269,11 +277,9 @@
     "\n",
     "simulation.runForClockTime(timing_walltime.to_openmm())\n",
     "\n",
-    "slowdown_factor = (\n",
-    "    simulation.currentStep \n",
-    "    * delta_t \n",
-    "    / timing_walltime\n",
-    ").to(unit.nanosecond/unit.hour)\n",
+    "slowdown_factor = (simulation.currentStep * delta_t / timing_walltime).to(\n",
+    "    unit.nanosecond / unit.hour\n",
+    ")\n",
     "\n",
     "print(f\"{simulation.currentStep} steps in {timing_walltime} ({slowdown_factor})\")"
    ]
@@ -313,15 +319,16 @@
     "import mdtraj\n",
     "import nglview\n",
     "\n",
+    "\n",
     "def wrap(trajectory):\n",
     "    \"\"\"Wrap positions back into the central box.\"\"\"\n",
     "    positions = trajectory.xyz[..., None, :]\n",
     "    box = trajectory.unitcell_vectors[:, None, :, :]\n",
-    "    \n",
+    "\n",
     "    frac_coords = positions @ np.linalg.inv(box)\n",
     "    wrapped_positions = (frac_coords - np.floor(frac_coords)) @ box\n",
     "    assert wrapped_positions.shape[2] == 1\n",
-    "        \n",
+    "\n",
     "    return mdtraj.Trajectory(\n",
     "        wrapped_positions[:, :, 0, :],\n",
     "        trajectory.top,\n",
@@ -329,14 +336,14 @@
     "        trajectory.unitcell_lengths,\n",
     "        trajectory.unitcell_angles,\n",
     "    )\n",
+    "\n",
+    "\n",
     "mdtraj.Trajectory.wrap = wrap\n",
     "\n",
     "# mdtraj_top = mdtraj.Topology.from_openmm(top.to_openmm())\n",
     "mdtraj_top = mdtraj.load(\"topology.pdb\").top\n",
     "\n",
-    "trajectory: mdtraj.Trajectory = mdtraj.load(\n",
-    "    \"trajectory.dcd\", top=mdtraj_top, stride=10\n",
-    ")\n"
+    "trajectory: mdtraj.Trajectory = mdtraj.load(\"trajectory.dcd\", top=mdtraj_top, stride=10)"
    ]
   },
   {
@@ -351,10 +358,9 @@
     "lipid_resnames = set()\n",
     "lipid_idcs = []\n",
     "for res in mdtraj_top.residues:\n",
-    "    if res.name.upper() not in ['HOH', 'CL-', 'NA+']:\n",
+    "    if res.name.upper() not in [\"HOH\", \"CL-\", \"NA+\"]:\n",
     "        lipid_resnames.add(res.name)\n",
-    "        lipid_idcs.extend(atom.index for atom in res.atoms)\n",
-    "        "
+    "        lipid_idcs.extend(atom.index for atom in res.atoms)"
    ]
   },
   {
@@ -366,8 +372,10 @@
    },
    "outputs": [],
    "source": [
-    "final_frame_lipid_centroid = trajectory.xyz[-1][lipid_idcs].sum(axis=0) / len(lipid_idcs)\n",
-    "box_centers = trajectory.unitcell_vectors.sum(axis=-1)/2"
+    "final_frame_lipid_centroid = trajectory.xyz[-1][lipid_idcs].sum(axis=0) / len(\n",
+    "    lipid_idcs\n",
+    ")\n",
+    "box_centers = trajectory.unitcell_vectors.sum(axis=-1) / 2"
    ]
   },
   {
@@ -393,9 +401,11 @@
    "outputs": [],
    "source": [
     "view = nglview.show_mdtraj(trajectory)\n",
-    "lipid_resnames_selection = ' OR '.join(lipid_resnames)\n",
+    "lipid_resnames_selection = \" OR \".join(lipid_resnames)\n",
     "view.clear()\n",
-    "view.add_representation(\"spacefill\", selection=f\"not ({lipid_resnames_selection})\", opacity=0.2)\n",
+    "view.add_representation(\n",
+    "    \"spacefill\", selection=f\"not ({lipid_resnames_selection})\", opacity=0.2\n",
+    ")\n",
     "view.add_representation(\"spacefill\", selection=lipid_resnames_selection)\n",
     "# view.add_unitcell()\n",
     "# view.add_axes()\n",
@@ -420,8 +430,7 @@
     "for i in range(1, n_frames, 1):\n",
     "    view.frame = i\n",
     "    time.sleep(seconds_per_frame)\n",
-    "    # view.control.spin([1,1,0], 0.1)\n",
-    "    "
+    "    # view.control.spin([1,1,0], 0.1)"
    ]
   },
   {
