--- a/G-PDB-bespokefit-to-simulation.ipynb
+++ b/G-PDB-bespokefit-to-simulation.ipynb
@@ -9,10 +9,21 @@
    "source": [
     "!wget -q https://raw.githubusercontent.com/openforcefield/2023-workshop-vignettes/main/colab_setup.ipynb\n",
     "%run colab_setup.ipynb\n",
+    "!mamba install \"openff-bespokefit =0.2.2\" \"xtb-python\" -c conda-forge -yq"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "df3c7ae2",
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "%env LD_LIBRARY_PATH=$LD_LIBRARY_PATH:$CONDA_PREFIX/lib/"
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "34131dc6",
    "metadata": {},
@@ -23,6 +34,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "461250f5",
    "metadata": {},
@@ -74,6 +86,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "457a114d",
    "metadata": {},
@@ -113,6 +126,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "188a7ec0",
    "metadata": {},
