--- a/R-custom_substructures_and_nagl.ipynb
+++ b/R-custom_substructures_and_nagl.ipynb
@@ -9,8 +9,17 @@
    "source": [
     "!wget -q https://raw.githubusercontent.com/openforcefield/2023-workshop-vignettes/main/colab_setup.ipynb\n",
     "%run colab_setup.ipynb\n",
-    "%env LD_LIBRARY_PATH=$LD_LIBRARY_PATH:$CONDA_PREFIX/lib/\n",
-    "!mamba install \"openff-nagl-models =0.0.2\" \"openff-nagl = 0.2.2\" -c conda-forge -yq"
+    "!mamba install chemper \"openff-nagl-models =0.0.2\" \"openff-nagl =0.2.2\" -c conda-forge -yq"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "8f73e692",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%env LD_LIBRARY_PATH=$LD_LIBRARY_PATH:$CONDA_PREFIX/lib"
    ]
   },
   {
